--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -151,3 +151,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  font-family: var(--font-monocraft), sans-serif;
+  letter-spacing: 0.025em;
+}
